<resources>
    <string name="app_name">Find Place</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp">°C</string>
    <string name="temp_">°C /</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="weather_icon">Weather icon</string>
    <string name="restaurant_photo">Restaurant Photo</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="f">°F</string>
    <string name="coffee">Coffee</string>
    <string name="restaurant">Restaurants</string>
    <string name="museums">Museums</string>
    <string name="malls">Malls</string>
    <string name="hotels">Hotels</string>
    <string name="map"> Map  </string>
    <string name="home">  Home  </string>
    <string name="my_plan">  My Plan  </string>
    <string name="delete_msg">Deleted Successfully</string>
    <string name="saved_msg">Description Saved Successfully</string>
    <string name="food">Food</string>
    <string name="all">All</string>
    <string name="phone">Phone: </string>
    <string name="reviews"> Reviews</string>
    <string name="closed">Closed</string>
    <string name="open">Open</string>
    <string name="chance_of_rain">Daily Chance of Rain:  </string>
    <string name="percentage">"%"</string>
    <string name="no_connection">No Connection</string>
    <string name="no_internet">No Internet</string>
    <string name="check_internet">Please Check Your Internet Connection</string>
    <string name="detail">Detail</string>
    <string name="no">No</string>

    <string name="yes">Yes</string>
    <string name="save">Save</string>
    <string name="no_place">No Places Available Here</string>
    <string name="please_change_location">Please Change Location</string>
    <string name="delete_confirmation">Are You Sure You Want To Delete It</string>
    <string name="delete_place">Delete Place From Your Plan</string>
    <string name="sort">Sort by</string>
    <string name="rating">Rating</string>
    <string name="distance">Distance</string>
</resources>