<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#37C3C1C1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1500dp"
        android:orientation="vertical"
        android:weightSum="10">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="307dp"
            android:layout_weight="2"
            android:foreground="@drawable/ic_mywavee">


        </RelativeLayout>

        <GridLayout
            android:id="@+id/mainGrid"
            android:layout_width="match_parent"
            android:layout_height="620dp"
            android:layout_weight="8"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:padding="14dp"
            android:rowCount="4">

            <androidx.cardview.widget.CardView
                android:id="@+id/All"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_baseline_check_box_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="All"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/coffee"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:background="#FFFFFF"
                        android:src="@drawable/ic_coffee" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coffee"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/restaurant"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_food" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurant"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/malls"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_shopping" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/malls"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/museumes"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_baseline_museum_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/museums"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/hotel"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="96dp"
                    android:layout_height="81dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_hotel_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hotels"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="2" />

    </LinearLayout>

</ScrollView>

















<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="#FFFFFF"-->
<!--    tools:context=".fragment.CategoryFragment">-->

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/linearLayout2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:background="#FFFFFF">-->


<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/musume"-->
<!--            android:layout_width="131dp"-->
<!--            android:layout_height="106dp"-->
<!--            tools:ignore="MissingConstraints"-->
<!--            tools:layout_editor_absoluteX="289dp"-->
<!--            tools:layout_editor_absoluteY="431dp" />-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/SHOW_ALL"-->
<!--            android:layout_width="131dp"-->
<!--            android:layout_height="106dp"-->
<!--            android:background="#FFFFFF"-->
<!--            card_view:layout_constraintEnd_toStartOf="@+id/Weather_fog"-->
<!--            card_view:layout_constraintStart_toStartOf="parent"-->
<!--            tools:ignore="MissingConstraints"-->
<!--            tools:layout_editor_absoluteY="284dp" />-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/restaurant"-->
<!--            android:layout_width="131dp"-->
<!--            android:layout_height="106dp"-->
<!--            tools:ignore="MissingConstraints"-->
<!--            tools:layout_editor_absoluteX="289dp"-->
<!--            tools:layout_editor_absoluteY="604dp" />-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/Coffee"-->
<!--            android:layout_width="131dp"-->
<!--            android:layout_height="106dp"-->
<!--            tools:ignore="MissingConstraints"-->
<!--            tools:layout_editor_absoluteX="62dp"-->
<!--            tools:layout_editor_absoluteY="439dp" />-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/Park"-->
<!--            android:layout_width="131dp"-->
<!--            android:layout_height="106dp"-->
<!--            tools:ignore="MissingConstraints"-->
<!--            tools:layout_editor_absoluteX="62dp"-->
<!--            tools:layout_editor_absoluteY="604dp" />-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/Weather_fog"-->
<!--            android:layout_width="131dp"-->
<!--            android:layout_height="106dp"-->
<!--            tools:ignore="MissingConstraints"-->
<!--            tools:layout_editor_absoluteX="293dp"-->
<!--            tools:layout_editor_absoluteY="284dp" />-->

<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/card_view5"-->
<!--            android:layout_width="480dp"-->
<!--            android:layout_height="248dp"-->
<!--            android:foreground="@drawable/ic_mywavee"-->
<!--            card_view:cardBackgroundColor="#FFFFFF"-->
<!--            card_view:cardCornerRadius="4dp"-->
<!--            card_view:layout_constraintEnd_toEndOf="parent"-->
<!--            card_view:layout_constraintStart_toStartOf="parent"-->
<!--            card_view:layout_constraintTop_toTopOf="parent"-->
<!--            tools:ignore="MissingConstraints">-->

<!--        </androidx.cardview.widget.CardView>-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--</FrameLayout>-->